Added swagger documentation for CartController@destroy
